--- a/Views/Shared/_CookieConsentPartial.cshtml
+++ b/Views/Shared/_CookieConsentPartial.cshtml
@@ -9,7 +9,7 @@
 @if (showBanner)
 {
     <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
-        Use this space to summarize your privacy and cookie use policy. <a asp-page="/Privacy">Learn More</a>.
+        Our privacy and cookie use policy ensures the protection of your personal information and governs the use of cookies to enhance your browsing experience. <a asp-action="Privacy">Learn More</a>.
         <button type="button" class="accept-policy close" data-bs-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
             <span aria-hidden="true">Accept</span>
         </button>
