stuff we do not need

--- a/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,7 +4,15 @@
     ViewData["Title"] = "Forgot password confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 text-center">
+            <h1>@ViewData["Title"]</h1>
+            <p>
+                Thank you. A system administrator will look into the issue. Please check your email for further updates.
+            </p>
+            <a href="/" class="btn btn-primary">Back to Home</a>
+        </div>
+    </div>
+</div>
+
