--- a/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -9,7 +9,7 @@
     if (@Model.DisplayConfirmAccountLink)
     {
 <p>
-    Thank you! <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
+    Thank you. <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
 </p>
     }
     else
