lots of css and making things look better and run smoother

--- a/Views/Home/AdminHomepage.cshtml
+++ b/Views/Home/AdminHomepage.cshtml
@@ -2,23 +2,22 @@
     Layout = "_AdminLayout";
 }
 
-<h1 class="text-center">Admin Homepage</h1>
+<h1 style="color: black; padding: 20px; text-align: center; font-size: 48px; font-family: 'Arial Black', sans-serif;" class="text-center">Admin Homepage</h1>
+
 
 <div class="container">
     <div class="row">
         <div class="col-4">
             <div class="card text-center">
                 <div class="card-body">
-                    <h5 class="card-title">View Orders</h5>
                     <div style="text-align:center;">
                         <img src="~/img/orders.png" class="img-fluid" style="width: 350px; height: 250px;" />
-                    </div>
-                    <p class="card-text">Click the button below to view orders.</p>
+                    </div><br />
                     <a asp-controller="Home" asp-action="AdminOrders"
                        class="btn btn-primary mx-auto d-block"
-                       style="display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
-                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2;
-                              border-color: #92b6f0; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 24px;">
+                       style="width:350px; display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
+                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0;
+                              border-color: black; font-weight: 600; text-transform: uppercase; line-height: 50px; font-size: 24px;">
                         View Orders
                     </a>
                 </div>
@@ -27,16 +26,14 @@
         <div class="col-4">
             <div class="card text-center">
                 <div class="card-body">
-                    <h5 class="card-title">View Customers</h5>
                     <div style="text-align:center;">
                         <img src="~/img/customer.png" class="img-fluid" style="width: 350px; height: 250px;" />
-                    </div>
-                    <p class="card-text">Click the button below to view customers.</p>
+                    </div><br />
                     <a asp-controller="Home" asp-action="AdminCustomers"
                        class="btn btn-primary mx-auto d-block"
-                       style="display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
-                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2;
-                              border-color: #92b6f0; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 24px;">
+                       style="width:350px; display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
+                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0;
+                              border-color: black; font-weight: 600; text-transform: uppercase; line-height: 50px; font-size: 24px;">
                         View Customers
                     </a>
                 </div>
@@ -45,20 +42,26 @@
         <div class="col-4">
             <div class="card text-center">
                 <div class="card-body">
-                    <h5 class="card-title">View Products</h5>
                     <div style="text-align:center;">
                         <img src="~/img/lego.png" class="img-fluid" style="width: 350px; height: 250px;" />
-                    </div>
-                    <p class="card-text">Click the button below to view products.</p>
+                    </div><br />
                     <a asp-controller="Home" asp-action="AdminProducts"
                        class="btn btn-primary mx-auto d-block"
                        style="display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
-                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2;
-                              border-color: #92b6f0; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 24px;">
+                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0;
+                              border-color: black; font-weight: 600; text-transform: uppercase; line-height: 50px; font-size: 24px;">
                         View Products
                     </a>
                 </div>
             </div>
         </div>
     </div>
+    <br /><br />
+    <br /><br />
+    <br /><br />
+    <br /><br />
+    <br /><br />
+    <br /><br />
+    <br /><br />
+    <br /><br />
 </div>
