--- a/Views/Home/DeleteProduct.cshtml
+++ b/Views/Home/DeleteProduct.cshtml
@@ -14,7 +14,21 @@
     <input type="hidden" asp-for="ProductId" />
 
     <form method="post" asp-action="DeleteProduct">
-        <button class="btn btn-danger" type="submit">Delete</button>
+        <button class="btn btn-info"
+                style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+                   color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
+                   font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"
+                type="submit">
+            Delete
+        </button>
     </form>
-    <a class="btn btn-info" asp-controller="Home" asp-action="AdminProducts">Cancel</a>
+
+    <a class="btn btn-info"
+       style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+          color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
+          font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"
+       asp-controller="Home" asp-action="AdminProducts">
+        Cancel
+    </a>
+
 </form>
