--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -1,11 +1,12 @@
 ﻿
-<h1 style=" text-align:center">About Us!</h1><br /><br />
+<h1 style="color: black; padding: 20px; text-align: center; font-size: 48px; font-family: 'Arial Black', sans-serif;">About Us!</h1>
+<br />
+
 <div style=" text-align:center">
     <img src="~/img/aurora_pic.png" />
 </div>
 <br />
 <br />
-
 
 <p> Aurora Brickwell, renowned throughout the Lego™ community, is not merely a collector but a master builder whose 
     passion for bricks knows no bounds. With a distributor license from The Lego Group™ and a substantial social 
