--- a/Views/Home/AddProduct.cshtml
+++ b/Views/Home/AddProduct.cshtml
@@ -37,6 +37,6 @@
     <label asp-for="SecondaryColor">SecondaryColor:</label>
     <input asp-for="SecondaryColor" type="text" style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br /><br />
 
-    <button type="submit" style="background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 4px; cursor: pointer; margin: auto; display: block;">Submit</button>
+    <button type="submit" style="background-color: #92b6f0; border-color:black; color: #fff; padding: 10px; border: none; border-radius: 4px; cursor: pointer; margin: auto; display: block;">Submit</button>
 
 </form>
