--- a/Views/Home/AdminCustomers.cshtml
+++ b/Views/Home/AdminCustomers.cshtml
@@ -28,7 +28,7 @@
                 <td style="text-align:center">@x.CustomerId</td>
                 <td style="text-align:center">@x.FirstName</td>
                 <td style="text-align:center">@x.LastName</td>
-                <td style="text-align:center">@x.BirthDate</td>
+                <td style="text-align:center">@x.BirthDate.Date.ToString("MM/dd/yyyy")</td>
                 <td style="text-align:center">@x.Country</td>
                 <td style="text-align:center">@x.Gender</td>
                 <td style="text-align:center">@x.Age</td>
@@ -37,7 +37,7 @@
                     <a class="btn btn-info"
                        asp-controller="Home" asp-action="EditCustomer" asp-route-id="@x.CustomerId"
                        style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-                       color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #b2cbf2; border-color: #92b6f0;
+                       color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
                        font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
                         Edit
                     </a>
@@ -46,7 +46,7 @@
                     <a class="btn btn-danger"
                        asp-controller="Home" asp-action="DeleteCustomer" asp-route-id="@x.CustomerId"
                        style="display: inline-flex; justify-content: center;align-items: center;outline: 0;cursor: pointer;height: 34px;padding: 0 13px;
-                       color: #fff;border-radius: 3px;border: 1px solid transparent;transition: all .3s ease;background:	#b2cbf2;border-color:#92b6f0;
+                       color: #fff;border-radius: 3px;border: 1px solid transparent;transition: all .3s ease;background:	#92b6f0;border-color:black;
                        font-weight: 600;text-transform: uppercase;line-height: 16px;font-size: 14px;">
                         Delete
                     </a>
