--- a/Views/Home/AdminOrders.cshtml
+++ b/Views/Home/AdminOrders.cshtml
@@ -30,12 +30,12 @@
             <tr>
                 <td style="text-align:center">@x.TransactionId</td>
                 <td style="text-align:center">@x.CustomerId</td>
-                <td style="text-align:center">@x.Date</td>
+                <td style="text-align:center">@x.Date.Date.ToString("MM/dd/yyyy")</td>
                 <td style="text-align:center">@x.DayOfWeek</td>
-                <td style="text-align:center">@x.Time</td>
+                <td style="text-align:center">@x.Time.ToShortTimeString()</td>
                 <td style="text-align:center">@x.CardType</td>
                 <td style="text-align:center">@x.EntryMode</td>
-                <td style="text-align:center">@x.Amount</td>
+                <td style="text-align:center">$@x.Amount</td>
                 <td style="text-align:center">@x.Type</td>
                 <td style="text-align:center">@x.Country</td>
                 <td style="text-align:center">@x.Address</td>
