--- a/Views/Home/EditCustomer.cshtml
+++ b/Views/Home/EditCustomer.cshtml
@@ -26,6 +26,12 @@
     <label asp-for="Age">Age:</label>
     <input asp-for="Age" type="text" required style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br /><br />
 
-    <button type="submit" style="background-color: #007bff; color: #fff; padding: 10px; border: none; border-radius: 4px; cursor: pointer; margin: auto; display: block;">Submit</button>
+    <button type="submit"
+            class="btn btn-info"
+            style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
+               color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
+               font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
+        Submit
+    </button>
 
 </form>
