--- a/Views/Home/AdminOrders.cshtml
+++ b/Views/Home/AdminOrders.cshtml
@@ -6,23 +6,24 @@
 
 <table class="table table-bordered table-striped">
 
-    <thead class="thead-dark fw-bold" style="background-color: #92b6f0;">
+    <thead class="thead-dark" style="background-color: #e8040c;">
         <tr>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">TransactionId</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">CustomerId</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Date</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">DayOfWeek</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Time</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">CardType</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">EntryMode</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Amount</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Type</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Country</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Address</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Bank</th>
-            <th style="text-align:center; background-color: #92b6f0;" class="text-white">Fraud?</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">TransactionId</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">CustomerId</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Date</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">DayOfWeek</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Time</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">CardType</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">EntryMode</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Amount</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Type</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Country</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Address</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Bank</th>
+            <th style="text-align:center; background-color: #e8040c; color: white; font-weight: bold;">Fraud?</th>
         </tr>
     </thead>
+
 
     <tbody>
         @foreach (var x in Model)
