--- a/Views/Home/DeleteCustomer.cshtml
+++ b/Views/Home/DeleteCustomer.cshtml
@@ -13,18 +13,18 @@
     <form method="post" asp-action="DeleteCustomer">
         <button class="btn btn-info"
                 style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-                   color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
+                   color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
                    font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"
                 type="submit">
-            Delete
+            <b>Delete</b>
         </button>
     </form>
 
     <a class="btn btn-info"
        style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-          color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
+          color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
           font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"
        asp-controller="Home" asp-action="AdminCustomers">
-        Cancel
+        <b>Cancel</b>
     </a>
 </form>
