--- a/Views/Home/AdminHomepage.cshtml
+++ b/Views/Home/AdminHomepage.cshtml
@@ -16,9 +16,9 @@
                     <a asp-controller="Home" asp-action="AdminOrders"
                        class="btn btn-primary mx-auto d-block"
                        style="width:350px; display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
-                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0;
+                              padding: 0 13px; color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c;
                               border-color: black; font-weight: 600; text-transform: uppercase; line-height: 50px; font-size: 24px;">
-                        View Orders
+                        <b>View Orders</b>
                     </a>
                 </div>
             </div>
@@ -32,9 +32,9 @@
                     <a asp-controller="Home" asp-action="AdminCustomers"
                        class="btn btn-primary mx-auto d-block"
                        style="width:350px; display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
-                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0;
+                              padding: 0 13px; color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c;
                               border-color: black; font-weight: 600; text-transform: uppercase; line-height: 50px; font-size: 24px;">
-                        View Customers
+                        <b>View Customers</b>
                     </a>
                 </div>
             </div>
@@ -48,9 +48,9 @@
                     <a asp-controller="Home" asp-action="AdminProducts"
                        class="btn btn-primary mx-auto d-block"
                        style="display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
-                              padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0;
+                              padding: 0 13px; color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c;
                               border-color: black; font-weight: 600; text-transform: uppercase; line-height: 50px; font-size: 24px;">
-                        View Products
+                        <b>View Products</b>
                     </a>
                 </div>
             </div>
