--- a/Views/Home/EditCustomer.cshtml
+++ b/Views/Home/EditCustomer.cshtml
@@ -29,9 +29,9 @@
     <button type="submit"
             class="btn btn-info"
             style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px;
-               color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black;
+               color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black;
                font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">
-        Submit
+        <b>Submit</b>
     </button>
 
 </form>
