--- a/Views/Home/NewUser.cshtml
+++ b/Views/Home/NewUser.cshtml
@@ -21,7 +21,7 @@
         <input asp-for="Age" type="number" required style="width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box;"><br />
 
 
-        <button type="submit" class="btn btn-info" style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0; border-color: black; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;">Submit</button>
+        <button type="submit" class="btn btn-info" style="display: inline-flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 34px; padding: 0 13px; color: white; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #e8040c; border-color: black; font-weight: 600; text-transform: uppercase; line-height: 16px; font-size: 14px;"><b>Submit</b></button>
 
     </form>
 </div>
