--- a/wwwroot/lib/font-awesome/css/all.css
+++ b/wwwroot/lib/font-awesome/css/all.css
@@ -489,7 +489,7 @@
   font-size: 2em; }
 
 .fa-inverse {
-  color: var(--fa-inverse, #fff); }
+  color: var(--fa-inverse, #black); }
 
 /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
 readers do not read off random characters that represent icons */
