--- a/Views/Home/Checkout.cshtml
+++ b/Views/Home/Checkout.cshtml
@@ -147,12 +147,17 @@
         <option value="Venezuela">Venezuela</option>
         <option value="Vietnam">Vietnam</option>
     </select>
-</form>
 
-<a asp-controller="Home" asp-action="Confirmation"
-   class="btn btn-primary mx-auto d-block"
-   style="width:200px; display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
+
+
+
+    <button type="submit"
+            class="btn btn-primary mx-auto d-block"
+            style="width:200px; display: flex; justify-content: center; align-items: center; outline: 0; cursor: pointer; height: 50px;
         padding: 0 13px; color: #fff; border-radius: 3px; border: 1px solid transparent; transition: all .3s ease; background: #92b6f0;
         border-color: black; font-weight: 600; text-transform: uppercase; line-height: 50px; font-size: 24px;">
         Place Order
-</a>
+    </button>
+
+</form>
+
