--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -21,10 +21,9 @@
             </div>
 
             <!-- Pagination at the bottom of the products list -->
-            <div class="d-flex justify-content-end mt-4">
+            <div class="row">
                 <div page-model="@Model.PaginationInfo" page-action="Products"
                      page-class-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
-                     page-url-projectType="@Model.CurrentProductCategory" page-url-projectColor="@Model.CurrentProductColor"
                      class="btn-group">
                 </div>
             </div>
